--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 
   <body>
-   <h1>test</h1>
-   <!-- <include src="./partials/header.html"></include> -->
+   <h1>test js</h1>
+  
 
 
-
+<script src="./index.js"></script>
   </body>
 </html>
